--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,12 @@ config/database.yml
 config/google_analytics.yml
 /nbproject/
 public/assets/**
+
+
+# Django #
+*.log
+*.pot
+*.pyc
+__pycache__
+db.sqlite3
+media
