--- a/react/package.json
+++ b/react/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack-merge": "^5.8.0"
   }
 }
